--- a/core-libs/glibc/autobuild/overrides/etc/nsswitch.conf
+++ b/core-libs/glibc/autobuild/overrides/etc/nsswitch.conf
@@ -4,7 +4,7 @@ passwd: files
 group: files
 shadow: files
 
-hosts: files mdns_minimal [NOTFOUND=return] dns mdns
+hosts: files mdns_minimal [NOTFOUND=return] resolve [!UNAVAIL=return] dns
 networks: files
 
 protocols: files
