gpsd: update build script

--- a/app-scientific/gpsd/autobuild/build
+++ b/app-scientific/gpsd/autobuild/build
@@ -17,7 +17,7 @@ export DESTDIR="$PKGDIR"
 scons install
 
 abinfo "Installing UDev rules ..."
-install -Dvm644 "$SRCDIR"/gpsd.rules \
+install -Dvm644 "$SRCDIR"/gpsd.rules.in \
     "$PKGDIR"/usr/lib/udev/rules.d/25-gpsd-usb.rules
 sed -e 's|/etc/default/gpsd|/etc/gpsd|' \
     -i "$SRCDIR"/gpsd.hotplug
