gpsd: update gpsd build script

--- a/app-scientific/gpsd/autobuild/build
+++ b/app-scientific/gpsd/autobuild/build
@@ -25,7 +25,13 @@ install -Dvm755 "$SRCDIR"/gpsd.hotplug \
     "$PKGDIR"/usr/lib/udev/gpsd.hotplug
 
 abinfo "Installing systemd units ..."
-install -Dvm644 "$SRCDIR"/systemd/gpsd.service \
+install -Dvm644 "$SRCDIR"/systemd/gpsd.service.in \
     "$PKGDIR"/usr/lib/systemd/system/gpsd.service
-install -Dvm644 "$SRCDIR"/systemd/gpsd.socket \
+sed -e 's|/etc/default/gpsd|/etc/gpsd|' \
+    -i "$SRCDIR"/systemd/gpsd.socket.in
+install -Dvm644 "$SRCDIR"/systemd/gpsd.socket.in \
     "$PKGDIR"/usr/lib/systemd/system/gpsd.socket
+sed -e 's|/etc/default/gpsd|/etc/gpsd|' \
+    -i "$SRCDIR"/systemd/gpsdctl@.service.in
+install -Dvm644 "$SRCDIR"/systemd/gpsdctl@.service.in \
+    "$PKGDIR"/usr/lib/systemd/system/systemd/gpsdctl@.service
