chromium: update to 127.0.6533.72
- Use rust-bindgen provided by the system.
- Remove OpenJDK from Build-Depends, since it's no longer invoked in the build process.
- Also remove OpenJDK related workarounds and patches.
- Remove some workarounds for testing.
- Remove an extra character in the appdata.xml.
- Track patches at https://dev.azure.com/AOSC-Tracking/_git/chromium @ aosc/v127.0.6533.72.
- Most patches are now properly credited.

--- a/app-web/chromium/autobuild/build
+++ b/app-web/chromium/autobuild/build
@@ -42,14 +42,9 @@ GNFLAGS=(
     'ozone_auto_platforms=true'
     "rustc_version=\"$RUSTC_VERSION\""
     'rust_sysroot_absolute="/usr"'
+    'rust_bindgen_root="/usr"'
+    'use_lld=true'
 )
-
-# LLD is unavaiable on loongarch64
-if ab_match_arch loongarch64; then
-    GNFLAGS+=('use_lld=false')
-else
-    GNFLAGS+=('use_lld=true')
-fi
 
 abinfo "Running gn to generate build rules ..."
 gn gen "$SRCDIR"/out/Release \
